--- a/t/Makefile
+++ b/t/Makefile
@@ -13,7 +13,7 @@ RM ?= rm -f
 # Shell quote;
 SHELL_PATH_SQ = $(subst ','\'',$(SHELL_PATH))
 
-T = $(wildcard t[0-9][0-9][0-9][0-9]-*.sh)
+T = $(wildcard t[0-9][0-9][0-9][0-9]-*.sh t-eg-[0-9][0-9][0-9][0-9]-*.sh)
 TSVN = $(wildcard t91[0-9][0-9]-*.sh)
 
 all: pre-clean
